data/derived/comb/progs/unify/prog6058.ml.out
Characters 170-194:
  | _ -> ((fst x + snd x)/10)::((fst x + snd x) mod 10)
                               ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
